# XFDTD_CUDA

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/: xfdtd_cuda-config.cmake.in
include/xfdtd_cuda/: common.cuh  fixed_array.cuh  host_device_carrier.cuh  index_task.cuh  memory.cuh  tensor.cuh  tensor_hd.cuh  tensor_texture_ref.cuh
include/xfdtd_cuda/boundary/: pml_corrector.cuh
include/xfdtd_cuda/calculation_param/: calculation_param.cuh  calculation_param_hd.cuh  fdtd_coefficient.cuh  fdtd_coefficient_hd.cuh  material_param.cuh  material_param_hd.cuh  time_param.cuh  time_param_hd.cuh
include/xfdtd_cuda/domain/: domain.cuh  domain_hd.cuh
include/xfdtd_cuda/electromagnetic_field/: electromagnetic_field.cuh  electromagnetic_field_hd.cuh
include/xfdtd_cuda/grid_space/: grid_space.cuh  grid_space_hd.cuh
include/xfdtd_cuda/simulation/: simulation.cuh  simulation_hd.cuh
include/xfdtd_cuda/updator/: basic_updator_te.cuh  basic_updator_te_agency.cuh  basic_updator_te_hd.cuh  update_scheme.cuh
include/xfdtd_cuda/waveform_source/tfsf/: tfsf_corrector.cuh  tfsf_corrector_hd.cuh
src/: CMakeLists.txt
src/boundary/: CMakeLists.txt  pml_corrector.cu  pml_corrector_hd.cu
src/calculation_param/: CMakeLists.txt  calculation_param.cu  calculation_param_hd.cu  fdtd_coefficient.cu  fdtd_coefficient_hd.cu  time_param.cu  time_param_hd.cu
src/domain/: CMakeLists.txt  domain_hd.cu
src/grid_space/: CMakeLists.txt  grid_space.cu  grid_space_hd.cu
src/include/boundary/: pml_corrector.cuh  pml_corrector_agency.cuh  pml_corrector_hd.cuh
src/include/corrector/: corrector_agency.cuh
src/include/domain/: domain_hd.cuh
src/include/material/ade_method/: ade_method.cuh  ade_method_hd.cuh  debye_ade_method.cuh  debye_ade_method_hd.cuh  drude_ade_method.cuh  drude_ade_method_hd.cuh  m_lor_ade_method.cuh  m_lor_ade_method_hd.cuh
src/include/monitor/: monitor_agency.cuh  movie_monitor.cuh  movie_monitor_agency.cuh  movie_monitor_hd.cuh
src/include/nf2ff/: interpolate_scheme.cuh
src/include/nf2ff/frequency_domain/: nf2ff_frequency_domain_agency.cuh  nf2ff_frequency_domain_data.cuh  nf2ff_frequency_domain_hd.cuh
src/include/nf2ff/time_domain/: nf2ff_time_domain_agency.cuh  nf2ff_time_domain_data.cuh  nf2ff_time_domain_hd.cuh
src/include/updator/: basic_updator_3d.cuh  basic_updator_3d_agency.cuh  basic_updator_3d_hd.cuh  basic_updator_te.cuh  basic_updator_te_agency.cuh  basic_updator_te_hd.cuh  update_scheme.cuh  updator.cuh  updator_agency.cuh  updator_hd.cuh
src/include/updator/ade_updator/: ade_updator.cuh  ade_updator_hd.cuh  debye_ade_updator.cuh  debye_ade_updator_agency.cuh  debye_ade_updator_hd.cuh  drude_ade_updator.cuh  drude_ade_updator_agency.cuh  drude_ade_updator_hd.cuh  m_lor_ade_updator.cuh  m_lor_ade_updator_agency.cuh  m_lor_ade_updator_hd.cuh  template_ade_update_scheme.cuh
src/include/updator/basic_updator/: basic_updator.cuh  basic_updator_3d.cuh  basic_updator_3d_hd.cuh  basic_updator_hd.cuh  basic_updator_te.cuh  basic_updator_te_agency.cuh  basic_updator_te_hd.cuh
src/include/waveform_source/tfsf/: tfsf_corrector.cuh  tfsf_corrector_agency.cuh  tfsf_corrector_hd.cuh
src/material/: CMakeLists.txt
src/material/ade_method/: ade_method.cu  ade_method_hd.cu  debye_ade_method.cu  debye_ade_method_hd.cu  drude_ade_method.cu  drude_ade_method_hd.cu  m_lor_ade_method.cu  m_lor_ade_method_hd.cu
src/monitor/: CMakeLists.txt  movie_monitor.cu
src/nf2ff/: CMakeLists.txt
src/nf2ff/frequency_domain/: nf2ff_frequency_domain.data.cu  nf2ff_frequency_domain_hd.cu
src/nf2ff/time_domain/: nf2ff_time_domain_data.cu  nf2ff_time_domain_hd.cu
src/simulation/: CMakeLists.txt  simulation_hd.cu
src/updator/: CMakeLists.txt  basic_updator_3d.cu  basic_updator_3d_hd.cu  basic_updator_te.cu  basic_updator_te_agency.cu  basic_updator_te_hd.cu
src/updator/ade_updator/: CMakeLists.txt  ade_updator.cu  ade_updator_hd.cu  debye_ade_updator.cu  debye_ade_updator_hd.cu  drude_ade_updator.cu  drude_ade_updator_hd.cu  m_lor_ade_updator.cu  m_lor_ade_updator_hd.cu
src/updator/basic_updator/: CMakeLists.txt  basic_updator_3d.cu  basic_updator_3d_hd.cu  basic_updator_te.cu  basic_updator_te_hd.cu
src/waveform_source/: CMakeLists.txt
src/waveform_source/tfsf/: CMakeLists.txt  tfsf_corrector.cu  tfsf_corrector_hd.cu
test/: 2d.cu  CMakeLists.txt  benchmark.cu  cylinder_scatter_2d.cu  device_query.cu  dielectric_sphere_scatter.cu  main.cu
test/dispersive_sphere_scatter/: debye_sphere_scatter.cu  dispersive_sphere_scatter.cuh  drude_sphere_scatter.cu  m_lorentz_sphere_scatter.cu
