aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/frequency_domain XFDTD_CUDA_FREQUENCY_DOAMIN_NF2FF_SRC)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/time_domain XFDTD_CUDA_TIME_DOMAIN_NF2FF_SRC)
set(XFDTD_CUDA_NF2FF_SRC ${XFDTD_CUDA_FREQUENCY_DOAMIN_NF2FF_SRC} ${XFDTD_CUDA_TIME_DOMAIN_NF2FF_SRC})
add_library(xfdtd_cuda_nf2ff OBJECT ${XFDTD_CUDA_NF2FF_SRC})

set(${ALL_OBJECT_FILES} ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:xfdtd_cuda_nf2ff> PARENT_SCOPE)